# django-bookstore

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  heroku.yml  pyproject.toml
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: admin.py  factories.py
order/migrations/: 0001_initial.py
order/tests/test_viewsets/: test_order_viewset.py
product/migrations/: 0001_initial.py  0002_rename_price_category_description.py
product/models/: category.py  product.py
product/serializers/: product_serializer.py
product/tests/: test_category_viewset.py  test_product_viewset.py
