[tool.poetry]
name = "django-bookstore"
version = "0.1.0"
description = "Django bookstore API"
authors = ["Kodashin <kodashin2@gmail.com>"]
readme = "README.md"
packages = [{include = "django_bookstore"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
factory-boy = "^3.2.1"
django = "^4.1.5"
django-rest-framework = "^0.1.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
